Added Compass (CSS-framework)

--- a/template/Gemfile
+++ b/template/Gemfile
@@ -2,6 +2,9 @@ source 'http://rubygems.org'
 
 gem 'rails', '3.0.0.beta3'
 
+gem "haml", ">=3.0.4"
+gem "compass", ">= 0.10.1"
+
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
