--- a/template/Gemfile
+++ b/template/Gemfile
@@ -5,10 +5,12 @@ gem 'rails', '3.0.0.beta3'
 gem "haml", ">=3.0.4"
 gem "compass", ">= 0.10.1"
 
-# Bundle edge Rails instead:
-# gem 'rails', :git => 'git://github.com/rails/rails.git'
-
 gem 'sqlite3-ruby', :require => 'sqlite3'
+
+group :test do
+  gem 'rspec', '>=2.0.0.beta.8'
+  gem 'rspec-rails', '>=2.0.0.beta.8'
+end
 
 # Use unicorn as the web server
 # gem 'unicorn'
